kube_resources/source_ip_testing_app/sourceapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sourceapp
  labels:
    app: sourceapp
spec:
  containers:
  - name: app
    image: ssasso/simple:2
    ports:
      - containerPort: 8080
  nodeSelector:
    kubernetes.io/hostname: k-worker-3
