kube_resources/source_ip_testing_app/sourceapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sourceapp
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: sourceapp
